# 11labs-bot

./: .dockerignore  .gitignore  11labs-bot-pod.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: main.py  main.py.bak
